@@ -16,13 +16,14 @@
 
 package com.hazelcast.platform.demos.banking.trademonitor;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 import java.util.UUID;
 
 import com.hazelcast.config.ClasspathYamlConfig;
 import com.hazelcast.config.Config;
 import com.hazelcast.config.JoinConfig;
+import com.hazelcast.config.NetworkConfig;
 import com.hazelcast.config.TcpIpConfig;
 
 import org.apache.kafka.clients.consumer.ConsumerConfig;
@@ -55,6 +56,7 @@ public class ApplicationConfig {
         Config config = new ClasspathYamlConfig("hazelcast.yml");
 
         JoinConfig joinConfig = config.getNetworkConfig().getJoin();
+        NetworkConfig networkConfig = config.getNetworkConfig();
 
         if (System.getProperty("my.kubernetes.enabled", "").equals("true")) {
             LOGGER.info("Kubernetes configuration: service-dns: {}",
@@ -64,20 +66,13 @@ public class ApplicationConfig {
 
             TcpIpConfig tcpIpConfig = new TcpIpConfig();
             tcpIpConfig.setEnabled(true);
-            if (System.getProperty("hazelcast.local.publicAddress", "").length() != 0) {
-                String publicAddress = System.getProperty("hazelcast.local.publicAddress");
-                String dockerHost = publicAddress.split(":")[0];
-                String port = publicAddress.split(":")[1];
-                tcpIpConfig.setMembers(Arrays.asList(dockerHost + ":5701", dockerHost + ":5702", dockerHost + ":5703"));
-                config.getNetworkConfig().setPort(Integer.parseInt(port));
-            } else {
-                tcpIpConfig.setMembers(Arrays.asList("127.0.0.1"));
-            }
+            String host = System.getProperty("hazelcast.local.publicAddress", "127.0.0.1");
+            host = host.replaceAll("5703", "5701").replaceAll("5702", "5701");
+            tcpIpConfig.setMembers(List.of(host));
 
-            joinConfig.setTcpIpConfig(tcpIpConfig);
+            networkConfig.getJoin().setTcpIpConfig(tcpIpConfig);
 
-            LOGGER.info("Non-Kubernetes configuration: member-list: {}",
-                    tcpIpConfig.getMembers());
+            LOGGER.info("Non-Kubernetes configuration: member-list: {}", tcpIpConfig.getMembers());
         }
 
         return config;
